v1.1 squashing a few bugs and missed errors

--- a/caesar-cipher_dark.css
+++ b/caesar-cipher_dark.css
@@ -69,7 +69,7 @@ textarea {
     border-style: ridge;
     border-radius: 1em;
     height: 5%;
-    padding: 2%;
+    padding: 1%;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
